--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,26 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="/fav-icon.png" />
-    <title>Product Details</title>
+   <!-- Primary Meta Tags -->
+<title>Product Details</title>
+<meta name="title" content="PREMIUM MENS SPORTS LATHER KEDS" />
+<meta name="description" content="Sed nec ultricies felis, vitae facilisis ipsum. Morbi id turpis euismod, rhoncus tortor quis, lobortis sapien. Sed imperdiet nulla in leo ullamcorper, in finibus elit porta. Sed eget congue neque, mattis finibus neque. In vel dolor ac augue pretium" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://metatags.io/" />
+<meta property="og:title" content="PREMIUM MENS SPORTS LATHER KEDS" />
+<meta property="og:description" content="Sed nec ultricies felis, vitae facilisis ipsum. Morbi id turpis euismod, rhoncus tortor quis, lobortis sapien. Sed imperdiet nulla in leo ullamcorper, in finibus elit porta. Sed eget congue neque, mattis finibus neque. In vel dolor ac augue pretium" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:title" content="PREMIUM MENS SPORTS LATHER KEDS" />
+<meta property="twitter:description" content="Sed nec ultricies felis, vitae facilisis ipsum. Morbi id turpis euismod, rhoncus tortor quis, lobortis sapien. Sed imperdiet nulla in leo ullamcorper, in finibus elit porta. Sed eget congue neque, mattis finibus neque. In vel dolor ac augue pretium" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
